# api/openapi/dist/openapi.yaml
@@ -51,8 +51,8 @@ paths:
       tags:
         - Projects
       parameters:
-        - $ref: '#/components/parameters/page'
-        - $ref: '#/components/parameters/per_page'
+        - $ref: '#/components/parameters/skip'
+        - $ref: '#/components/parameters/limit'
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/project_search_filter'
       responses:
@@ -220,9 +220,9 @@ components:
           scopes:
             board:read: Read the board
   parameters:
-    page:
+    skip:
       in: query
-      name: page
+      name: skip
       required: false
       description: Which 'page' of paginated results to return.
       schema:
@@ -230,9 +230,9 @@ components:
         minimum: 1
         default: 1
       example: 1
-    per_page:
+    limit:
       in: query
-      name: per_page
+      name: limit
       required: false
       description: Number of items returned per page
       schema:
@@ -304,13 +304,13 @@ components:
     pages:
       type: object
       properties:
-        page:
+        skip:
           type: integer
           format: int32
           readOnly: true
           example: 1
           description: The current page number in the paginated response.
-        per_page:
+        limit:
           type: integer
           format: int32
           readOnly: true
